fable/test/valid/combine_decl_1.f
      program prog
      integer vals
      dimension vals(2)
      dimension abc(4)
      write(6, *) vals(1)
      write(6, *) abc(3)
      end
