fable/test/semantic_error/dimension_unknown_data_type.f
      program prog
      implicit none
      dimension nums(2)
      write(6, *) nums(1)
      end
